Layout fix - headers (h3, h4, h...) has been aligned to left

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -61,6 +61,9 @@
     margin-top: 2.15em;
   }
 
+  h2 {
+  }
+
   h2,
   h3,
   h4,
@@ -68,10 +71,17 @@
   h6 {
     margin: 1em 0;
     line-height: 1.25em;
-    text-align: center;
+  }
+
+  h3
+  h4,
+  h5,
+  h6 {
+    text-align: left;
   }
 
   h2 {
+    text-align: center;
     font-size: 2.7em;
   }
 
